form, radio, async;

--- a/opt.html
+++ b/opt.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Censore Content</title>
+    <title>Censor Content</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -23,18 +23,20 @@
         <li>Read a book</li>
         <li>Organize office</li>
     </ul>
-    ..
+
     <div class="header">
         Options
     </div>
 
-    <div class="neumorphism-toggle">
-        <input type="checkbox" id="neumorphism" checked>
-        <label for="neumorphism">
-          <div class="switch">
-              <div class="dot"></div>
-          </div>
-          <span>Neumorphism</span>
+    <div class="showAlertCheckbox-toggle">
+        <input type="checkbox" id="showAlertCheckbox">
+        <label for="showAlertCheckbox">
+            <div class="switch">
+            <div class="dot"></div>
+            </div>
+            <span>Show Alert!<br>
+              <small>Show popup alert on webiste, when i'll find something.</small>
+            </span>
       </label>
     </div>
 
