--- a/opt.html
+++ b/opt.html
@@ -41,18 +41,18 @@
     </div>
 
 
+    <div>
+        <select id="color">
+            <option value="red">red</option>
+            <option value="green">green</option>
+            <option value="blue">blue</option>
+            <option value="yellow">yellow</option>
+        </select>
+    </div>
+    <div>
+        <input type="checkbox" id="like">I like colors.
 
-    <select id="color">
- <option value="red">red</option>
- <option value="green">green</option>
- <option value="blue">blue</option>
- <option value="yellow">yellow</option>
-</select>
-
-    <label>
-  <input type="checkbox" id="like">
-  I like colors.
-</label>
+    </div>
 
     <div id="status"></div>
     <button id="save">Save</button>
