--- a/opt.html
+++ b/opt.html
@@ -12,12 +12,25 @@
         <input type="checkbox" id="showAlertCheckbox">
         <label for="showAlertCheckbox">
             <div class="switch">
-            <div class="dot"></div>
+                <div class="dot"></div>
             </div>
             <span>Show Alert!<br>
               <small>Show popup alert on webiste, when i'll find something.</small>
             </span>
       </label>
+    </div>
+
+    <div class="showAlertCheckbox-toggle">
+        <input type="checkbox" id="blockImagesCheckbox">
+        <label for="blockImagesCheckbox">
+            <div class="switch">
+                <div class="dot"></div>
+            </div>
+            <span>Block All Images
+                <br><small>Block all pictures, when find phrase on website.</small>
+            </span>
+        </label>
+
     </div>
 
     <div id="myDIV" class="header">
@@ -56,7 +69,6 @@
     <button id="save">Save</button>
 
     <script src="opt.js"></script>
-    <script src="form.js"></script>
 </body>
 
 </html>
