create list of user unputs in array; create <li> for each; correct min width for alert visibliti;..

--- a/opt.html
+++ b/opt.html
@@ -4,7 +4,6 @@
 <head>
     <title>Censor Content</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
@@ -27,13 +26,10 @@
     </div>
 
     <ul id="myUL">
-        <li>Hit the gym</li>
-        <li>Pay bills</li>
-        <li>Meet George</li>
     </ul>
 
     <div class="header">
-        Options
+        <b>Options</b>
     </div>
 
 
