--- a/opt.html
+++ b/opt.html
@@ -20,8 +20,8 @@
 
 
     <div id="myDIV" class="header">
-        <h2>Content To Censore</h2>
-        <input type="text" id="myInput" placeholder="Title...">
+        <!-- <h2>Content To Censore</h2> -->
+        <input type="text" id="myInput" placeholder="Add phrase...">
         <span id="addButton" class="addBtn">Add</span>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="mCheckbox-toggle">
-        <input type="checkbox" id="blockImagesCheckbox">
+        <input type="checkbox" id="blockImagesCheckbox" disabled="disabled">
         <label for="blockImagesCheckbox">
             <div class="switch">
                 <div class="dot"></div>
@@ -57,21 +57,6 @@
         </label>
 
     </div>
-    <!-- 
-    <div>
-        <select id="color">
-            <option value="red">red</option>
-            <option value="green">green</option>
-            <option value="blue">blue</option>
-            <option value="yellow">yellow</option>
-        </select>
-    </div>
-    <div>
-        <input type="checkbox" id="like">I like colors.
-
-    </div>
-
-    <button id="save">Save</button> -->
 
     <script src="opt.js"></script>
 </body>
