--- a/opt.html
+++ b/opt.html
@@ -28,10 +28,7 @@
     <ul id="myUL">
     </ul>
 
-    <div class="header">
-        <b>Options</b>
-    </div>
-
+    <hr>
 
     <div class="mCheckbox-toggle">
         <input type="checkbox" id="showAlertCheckbox">
@@ -46,13 +43,13 @@
     </div>
 
     <div class="mCheckbox-toggle">
-        <input type="checkbox" id="blockImagesCheckbox" disabled="disabled">
+        <input type="checkbox" id="blockImagesCheckbox">
         <label for="blockImagesCheckbox">
             <div class="switch">
                 <div class="dot"></div>
             </div>
-            <span>Block All Images
-                <br><small>Block all pictures, when find phrase on website.</small>
+            <span>Cover All Images
+                <br><small>Cover all pictures, when find phrase on website.</small>
             </span>
         </label>
 
