icons - manifest, options, active/unactive

--- a/opt.html
+++ b/opt.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Censor Content</title>
-    <link rel="shortcut icon" href="images/ico96.ico" />
+    <link rel="shortcut icon" href="ico96.ico" />
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
