--- a/opt.html
+++ b/opt.html
@@ -18,13 +18,11 @@
         </label>
     </div>
 
-    
     <div style="padding-top: 10px; min-height: 30px; text-align: center;">
         <button disabled id="refreshButton" style="padding: 10px; display: inline-block; ">REFRESH WEBSITE</button>
 
-        <svg id="mSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            style="margin: auto; background: rgba(255, 255, 255, 0.1); shape-rendering: auto; z-index: 10; position: absolute;"
-            width="40px" height="40px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+        <svg id="mSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; background: rgba(255, 255, 255, 0.1); shape-rendering: auto; z-index: 10; position: absolute;" width="40px" height="40px" viewBox="0 0 100 100"
+            preserveAspectRatio="xMidYMid">
             <g transform="translate(50 50)">
                 <g transform="rotate(27.1078)">
                     <animateTransform attributeName="transform" type="rotate" values="0;45" keyTimes="0;1" dur="0.2s"
@@ -97,7 +95,6 @@
 
     <ul id="myUL">
     </ul>
-
 
     <script src="opt.js"></script>
 </body>
